# amethyst-fxaa

./: Cargo.toml  LICENSE.md  README.md  renderdoc.cap
assets/: scene.ron
assets/shader/: compile.sh  fxaa.frag  fxaa.frag.spv
config/: display.ron
src/: fxaa.rs  graph.rs  main.rs  offscreen.rs
